# Kawaii-Translator

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/App/: hotkey_manager.py  main_window.py  ocr_window.py  screenshot.py  settings_service.py
src/App/tabs/: settings_tab.py
src/OCR/: ocr_manager.py
src/OCR/engines/: abstract_engine.py  mangaocr_engine.py  openai_compatible_engine.py  paddleocr_engine.py  windows_ocr_engine.py
src/Translation/: translation_manager.py
src/Translation/engines/: abstract_engine.py  deeplx_engine.py  dummy_engine.py  google_translate_engine.py  openai_compatible_engine.py
src/Util/: CheckableComboBox.py
tests/e2e/: conftest.py  test_app.py  test_config.json  test_settings.py
tests/unit/app/: test_hotkey_manager.py  test_settings_service.py
tests/unit/ocr/: test_ocr_manager.py
tests/unit/translation/: test_translation_manager.py
tests/unit/util/: test_checkable_combo_box.py
