[project]
name = "kawaiiTranslator"
version = "1.1.0"
dependencies = [
    "PyQt6", "pynput", "Pillow", "numpy", "opencv-contrib-python"
]

[project.optional-dependencies]
test = [
	"pytest",
	"pytest-qt",
	"pytest-mock",
	"pytest-cov"
]
paddle_ocr_cpu = [
	"paddlepaddle", "paddleocr"
]
windows_ocr = [
	"winocr"
]
manga_ocr = [
	"manga-ocr"
]
openai = [
	"openai"
]
google_translate = [
	"googletrans"
]

all_ocr = [
	"kawaiiTranslator[paddle_ocr_cpu,windows_ocr,manga_ocr,openai]"
]
all_translation = [
	"kawaiiTranslator[openai, google_translate]"
]
all = [
	"kawaiiTranslator[all_ocr,all_translation]"
]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
omit = [
    "tests/*", "*__init__.py"
]